--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,7 @@ main {
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 ::-webkit-input-placeholder {
@@ -424,6 +425,277 @@ section#moreCards div.container-moreCards div.card div.content a button:hover {
   section#moreCards div.container-moreCards:nth-child(3) {
     width: 33.33%;
     justify-content: flex-start;
+  }
+}
+section#instagram {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 430px;
+}
+section#instagram h1 {
+  font-family: "Lato", sans-serif;
+  font-weight: 100;
+  font-size: 40px;
+  word-spacing: 20px;
+}
+section#instagram h3 {
+  font-family: "Lato", sans-serif;
+}
+
+.center {
+  display: flex !important;
+}
+.center .slick-slide div div {
+  display: flex !important;
+  align-items: center;
+  height: 268px;
+}
+.center .slick-slide div div img {
+  width: 100%;
+  object-fit: contain;
+}
+.center .slick-arrow {
+  display: none !important;
+}
+
+@media only screen and (min-width: 768px) {
+  section#instagram {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 200px;
+  }
+  section#instagram h3 {
+    margin-bottom: 50px;
+  }
+}
+section#about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100px;
+}
+section#about h1 {
+  padding: 0 20px;
+  text-align: center;
+  font-size: 40px;
+  font-family: "Lato", sans-serif;
+  font-weight: 100;
+  margin-bottom: 40px;
+}
+section#about p {
+  padding: 0 24px;
+  font-family: "Lato", sans-serif;
+  text-align: center;
+  max-width: 960px;
+}
+
+section#newsletter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 100px 0;
+}
+section#newsletter div.text h3 {
+  text-align: center;
+  font-family: "Lato", sans-serif;
+  font-weight: bold;
+  padding: 0 24px;
+  margin-bottom: 10px;
+  color: #333;
+}
+section#newsletter div.text p {
+  font-family: "Lato", sans-serif;
+  text-align: center;
+  padding: 0 24px;
+}
+section#newsletter div.container-input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+section#newsletter div.container-input input {
+  border: none;
+  border-bottom: 1px solid gray;
+  padding: 10px 0 10px 10px;
+  font-size: 20px;
+  width: 80vw;
+  margin: 20px 0;
+  transition: 0.3s linear;
+}
+section#newsletter div.container-input input:focus {
+  border-bottom: 2px solid #333333;
+}
+section#newsletter div.container-input button {
+  border: 1px solid gray;
+  font-family: "Lato", sans-serif;
+  padding: 5px 40px;
+  height: 50px;
+  background: transparent;
+}
+@media only screen and (min-width: 576px) {
+  section#newsletter div.container-input {
+    flex-direction: row;
+    align-items: center;
+  }
+  section#newsletter div.container-input input {
+    width: 300px;
+    margin-right: 20px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  section#newsletter {
+    flex-direction: row;
+    justify-content: center;
+  }
+  section#newsletter div.text {
+    width: 400px;
+  }
+  section#newsletter div.container-input {
+    width: 50%;
+    justify-content: center;
+  }
+  section#newsletter div.container-input input {
+    width: 300px;
+    margin-right: 20px;
+  }
+}
+footer {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  padding-bottom: 100px;
+}
+footer div.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  width: 20%;
+}
+footer div.container h3 {
+  font-weight: bold;
+  font-family: "Lato", sans-serif;
+  color: black;
+  font-size: 15px;
+}
+footer div.container div.links {
+  display: grid;
+  margin-top: 30px;
+}
+footer div.container div.links a,
+footer div.container div.links h4 {
+  font-weight: 100;
+  font-family: "Lato", sans-serif;
+  color: black;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+footer div.container div.methods-of-payment {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+footer div.container div.methods-of-payment div.method {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 33.33%;
+  margin-top: 10px;
+}
+footer div.container div.encrypt {
+  margin-top: 20px;
+}
+footer div.lastDiv {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+}
+footer div.lastDiv div.socialMedia,
+footer div.lastDiv div.copyright,
+footer div.lastDiv div.container-dev {
+  margin-top: 20px;
+  width: 100%;
+}
+footer div.lastDiv div.socialMedia {
+  display: flex;
+  justify-content: center;
+}
+footer div.lastDiv div.socialMedia a {
+  transition: 0.3s linear;
+  margin: 0 20px;
+}
+footer div.lastDiv div.socialMedia a img {
+  width: 30px;
+}
+footer div.lastDiv div.socialMedia a:hover {
+  cursor: pointer;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
+}
+footer div.lastDiv div.copyright p {
+  padding: 0 24px;
+  text-align: justify;
+  margin-top: 20px;
+  font-size: 12px;
+}
+footer div.lastDiv div.container-dev {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+footer div.lastDiv div.container-dev img {
+  margin: 0 20px;
+}
+
+@media only screen and (max-width: 1300px) {
+  footer div.container {
+    width: 33.33%;
+  }
+  footer div.container:nth-child(4),
+footer div.container:nth-child(5) {
+    margin-top: 20px;
+    width: 50%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  footer div.container {
+    width: 50%;
+  }
+  footer div.container:nth-child(3) {
+    text-align: center;
+    margin-top: 20px;
+  }
+  footer div.container:nth-child(5) {
+    margin-top: 20px;
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 576px) {
+  footer div.container {
+    margin-top: 10px;
+    width: 100% !important;
+  }
+}
+@media only screen and (min-width: 768px) {
+  footer div.lastDiv {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  footer div.lastDiv div.socialMedia,
+footer div.lastDiv div.copyright,
+footer div.lastDiv div.container-dev {
+    margin-top: 20px;
+    width: 33.33%;
   }
 }
 
