--- a/assets/scss/placeCarousel.scss
+++ b/assets/scss/placeCarousel.scss
@@ -100,6 +100,7 @@ div.carousel-address {
 
                     img {
                         width: 20px;
+                        height: 20px;
                     }
                 }
 
